--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
 
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">Home</a>
+        <!-- <a class="navbar-brand" href="#">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span> -->
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" ng-model="teste" placeholder="Pesquise seu nome" aria-label="Search">
+            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
+        </form>
     </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-            <!-- <li class="nav-item active">
+             <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li> -->
+            </li> 
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" ng-model="teste" placeholder="Pesquise seu nome" aria-label="Search">
                 <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
             </form>
-        </div>
+        </div> -->
     </nav>
 
     <div class="container">
