--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- <a class="navbar-brand" href="#">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span> -->
-        <form class="form-inline my-2 my-lg-0">
+        <form class="form-inline formEr">
             <input class="form-control mr-sm-2" type="text" ng-model="teste" placeholder="Pesquise seu nome" aria-label="Search">
             <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
         </form>
